--- a/index.html
+++ b/index.html
@@ -323,35 +323,48 @@
 
     // --- Función para parsear el texto CSV ---
     function parseCSVData(csvText) {
-        // ... (código sin cambios)
         STUDENT_DATA_INTERNAL = {};
+        // (CORREGIDO) Eliminar el carácter BOM (Byte Order Mark) si existe
+        if (csvText.charCodeAt(0) === 0xFEFF) {
+            csvText = csvText.substring(1);
+        }
         const lines = csvText.trim().split('\n');
+        
+        // (CORREGIDO) Limpiar encabezados de forma más robusta
         const headers = lines[0].split(',').map(h => h.trim().replace(/\r/g, ''));
-        const nameIndex = headers.findIndex(h => h.toLowerCase().includes('nombre'));
-        const emailIndex = headers.findIndex(h => h.toLowerCase().includes('email'));
-        const docTypeIndex = headers.findIndex(h => h.toLowerCase().includes('tipo de documento'));
-        const docNumberIndex = headers.findIndex(h => h.toLowerCase().includes('número de documento'));
-        const birthDateIndex = headers.findIndex(h => h.toLowerCase().includes('fecha de nacimiento'));
-        const colegioIndex = headers.findIndex(h => h.toLowerCase().includes('colegio'));
-        const municipioIndex = headers.findIndex(h => h.toLowerCase().includes('municipio'));
-        const matIndex = headers.findIndex(h => h.toLowerCase().includes('matemáticas'));
-        const lecIndex = headers.findIndex(h => h.toLowerCase().includes('lectura'));
-        const socIndex = headers.findIndex(h => h.toLowerCase().includes('sociales'));
-        const cienIndex = headers.findIndex(h => h.toLowerCase().includes('ciencias'));
-        const ingIndex = headers.findIndex(h => h.toLowerCase().includes('inglés'));
-        const globalIndex = headers.findIndex(h => h.toLowerCase().includes('puntaje global'));
+
+        // (CORREGIDO) Cambiado de .includes() a .toLowerCase() === para coincidencia exacta
+        const nameIndex = headers.findIndex(h => h.toLowerCase() === 'nombre completo del estudiante');
+        const emailIndex = headers.findIndex(h => h.toLowerCase() === 'email');
+        const docTypeIndex = headers.findIndex(h => h.toLowerCase() === 'tipo de documento');
+        const docNumberIndex = headers.findIndex(h => h.toLowerCase() === 'número de documento');
+        const birthDateIndex = headers.findIndex(h => h.toLowerCase() === 'fecha de nacimiento');
+        const colegioIndex = headers.findIndex(h => h.toLowerCase() === 'colegio/institución');
+        // (CORREGIDO) Leer 'departamento' ya que 'municipio' no existe en el CSV
+        const municipioIndex = headers.findIndex(h => h.toLowerCase() === 'departamento'); 
+        const matIndex = headers.findIndex(h => h.toLowerCase() === 'matemáticas');
+        const lecIndex = headers.findIndex(h => h.toLowerCase() === 'lectura crítica');
+        const sodex = headers.findIndex(h => h.toLowerCase() === 'sociales');
+        const cienIndex = headers.findIndex(h => h.toLowerCase() === 'ciencias naturales');
+        const ingIndex = headers.findIndex(h => h.toLowerCase() === 'inglés');
+        const globalIndex = headers.findIndex(h => h.toLowerCase() === 'puntaje global');
 
         for (let i = 1; i < lines.length; i++) {
+             // (CORREGIDO) Ignorar líneas vacías
+            if (!lines[i] || lines[i].trim() === "") continue;
+            
             const values = lines[i].replace(/\r/g, '').split(',').map(v => v.trim());
             if (values.length < headers.length) continue;
-            const docNumber = values[docNumberIndex];
-            if (!docNumber) continue;
-            const parseGlobalScore = (scoreString) => { /* ... */ return parseInt((scoreString || '0/').split('/')[0], 10) || 0; };
-            const parseBirthDate = (dateString) => { /* ... */ const m=dateString.match(/(\d{1,2})\/(\d{1,2})\/(\d{4})/); return m ? `${parseInt(m[1])}/${parseInt(m[2])}/${m[3]}`:dateString||'';};
-            STUDENT_DATA_INTERNAL[docNumber] = {
-                nombre: values[nameIndex] || 'N/A', email: values[emailIndex] || '-', docType: values[docTypeIndex] || '-', docNumber: docNumber, birthDate: parseBirthDate(values[birthDateIndex]), departamento: "", colegio: values[colegioIndex] || 'seamosgenios',
-                puntajes: { matematicas: parseInt(values[matIndex], 10) || 0, lectura: parseInt(values[lecIndex], 10) || 0, sociales: parseInt(values[socIndex], 10) || 0, ciencias: parseInt(values[cienIndex], 10) || 0, ingles: parseInt(values[ingIndex], 10) || 0 },
-                puntajeGlobal: parseGlobalScore(values[globalIndex]), municipio: municipioIndex !== -1 ? (values[municipioIndex] || 'Desconocido') : 'Desconocido'
+                puntajes: {
+                    matematicas: parseInt(values[matIndex], 10) || 0,
+                    lectura: parseInt(values[lecIndex], 10) || 0,
+                    sociales: parseInt(values[sodex], 10) || 0,
+                    ciencias: parseInt(values[cienIndex], 10) || 0,
+                    ingles: parseInt(values[ingIndex], 10) || 0,
+                },
+                puntajeGlobal: parseGlobalScore(values[globalIndex]),
+                // (CORREGIDO) Usar municipioIndex (que ahora apunta a Departamento)
+                municipio: municipioIndex !== -1 ? (values[municipioIndex] || 'Desconocido') : 'Desconocido'
             };
         }
         ALL_STUDENTS_ARRAY = Object.values(STUDENT_DATA_INTERNAL);
@@ -647,5 +660,6 @@
     </script>
 </body>
 </html>
+
 
 
